focus of 2022 added

--- a/index.html
+++ b/index.html
@@ -6,12 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     <title>Mission 2022</title>
 </head>
 
 <body>
-    <h1>Stay Focused on</h1>
-    <h1><span class="color-orange">Mission 2022</span></h1>
+    <section class="flexible-container">
+        <div class="half-width top-margin">
+            <div class="stay-focused focused-font">
+                <h1>Stay Focused on <span class="color-orange">Mission 2022</span></h1>
+            </div>
+            <div class="top-paragraph">
+                <p>We wish to now dedicate ourselves in realizing the
+                    next vision, which is to transform Bangladesh into a developed country by 2041. My team and I,
+                    remain committed to play our part in achieving that goal. That is our resolution for 2022 and
+                    beyond.</p>
+                <a class="explore-button" target="_blank" href="">Explore Now</a>
+                <p>Scroll down to explore more about us</p>
+            </div>
+        </div>
+        <div class="half-width">
+            <img src="images/person/person-0.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
