mission of 2022 added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap" rel="stylesheet">
     <title>Mission 2022</title>
 </head>
 
@@ -27,11 +30,34 @@
                     remain committed to play our part in achieving that goal. That is our resolution for 2022 and
                     beyond.</p>
                 <a class="explore-button" target="_blank" href="">Explore Now</a>
-                <p>Scroll down to explore more about us</p>
+                <p class="paraghaphs">Scroll down to explore more about us</p>
             </div>
         </div>
         <div class="half-width">
             <img src="images/person/person-0.png" alt="">
+        </div>
+    </section>
+    <section>
+        <h1 class="my-mission"><span class="color-blue">My Mission in </span><span class="color-orange">2022</span></h1>
+        <div class="flexible-container">
+            <div class="missions">
+                <img src="images/illustrators/illustrator-1.png" alt="">
+                <h2>Mission</h2>
+                <p class="paraghaphs">My mission is to create and lead a dream team where everyone is playing to their
+                    strengths.</p>
+            </div>
+            <div class="visions">
+                <img src="images/illustrators/illustrator-2.png" alt="">
+                <h2>Vision</h2>
+                <p class="paraghaphs">My vision is to be an honest, empathetic and impactful project leader and to be
+                    recognized internationally within my industry.</p>
+            </div>
+            <div class="goals">
+                <img src="images/illustrators/illustrator-3.png" alt="">
+                <h2>Goals</h2>
+                <p class="paraghaphs">My goal is to work on websites that are used by billions of people and have a
+                    global influence.</p>
+            </div>
         </div>
     </section>
 </body>
