development area added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <p>We wish to now dedicate ourselves in realizing the
                     next vision, which is to transform Bangladesh into a developed country by 2041. My team and I,
                     remain committed to play our part in achieving that goal. That is our resolution for 2022 and
-                    beyond.</p>
+                    beyond.
+                </p>
                 <a class="explore-button" target="_blank" href="">Explore Now</a>
                 <p class="paraghaphs">Scroll down to explore more about us</p>
             </div>
@@ -60,6 +61,26 @@
             </div>
         </div>
     </section>
+    <section class="flexible-container development-area">
+        <div class="width2 margin2">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="width3 margin3">
+            <div class="margin4">
+                <h2><span class="color-black">Develop Without Limits</span></h2>
+            </div>
+            <div>
+                <p class="paragraph2">We wish to now dedicate ourselves in realizing the
+                    next vision, which is to transform Bangladesh into a developed country by 2041. My team and I,
+                    remain committed to play our part in achieving that goal. That is our resolution for 2022 and
+                    beyond.
+                </p>
+                <a class="documentation-button" target="_blank" href="">Read the Documentation</a>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
