community area added

--- a/index.html
+++ b/index.html
@@ -79,7 +79,23 @@
             </div>
         </div>
     </section>
-
+    <section class="flexible-container community-area">
+        <div class="width3 margin5">
+            <div class="margin6">
+                <h2><span class="color-black">Know Our Global Community</span></h2>
+            </div>
+            <div>
+                <p class="paragraph2">A developer community generally defined is a group of developers gathered in a
+                    place to achieve a common goal. The purpose of a developer community and the pieces that build the
+                    community puzzle are complex and different for each unique case.
+                </p>
+                <a class="documentation-button" target="_blank" href="">Read the Documentation</a>
+            </div>
+        </div>
+        <div class="width2 margin7">
+            <img src="images/pictures/project.png" alt="">
+        </div>
+    </section>
 
 </body>
 
