application area added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,25 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+    <section class="app-area1">
+        <h1 class="my-mission">Build <span class="color-orange">Corona Application</span></h1>
+        <div class="flexible-container app-area3">
+            <div class="half-width2 margin2 app-area2">
+                <img src="images/pictures/app.png" alt="">
+            </div>
+            <div class="half-width2 margin9">
+                <div class="margin8">
+                    <h2><span class="color-black">Stay safe with Go<span class="color-orange">Corona.</span></h2>
+                </div>
+                <div>
+                    <p class="paragraph2">GoCorona is an initiative by the ICT Division and DGHS with the objective of
+                        bringing the people of Bangladesh together in the combined fight against COVID-19.
+                    </p>
+                    <a class="documentation-button" target="_blank" href="">App Feature</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
