--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Mission 2022</title>
 </head>
 
@@ -115,6 +118,11 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <h1>Mission <span class="color-red">2022</span></h1>
+        <p>Hard work, Perseverance and Determination for 2022</p>
+    </footer>
 
 </body>
 
