--- a/index.html
+++ b/index.html
@@ -118,6 +118,26 @@
             </div>
         </div>
     </section>
+    <section>
+        <h1 class="my-mission">Contact <span class="color-orange">Us</span></h1>
+        <div class="container">
+
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+            <label for="email">E-mail</label>
+            <input type="email" id="email" name="email" placeholder="Your email address..">
+
+            <label for="subject">Leave a message</label>
+            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+            <input type="submit" value="Submit">
+
+        </div>
+    </section>
 
     <footer>
         <h1>Mission <span class="color-red">2022</span></h1>
